# silt

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  skills-lock.json
.github/actions/publish/: action.yml
.github/actions/version/: action.yml
.github/workflows/: ci.yml  release.yml  version.yml
Formula/: silt-cli.rb  silt-tui.rb
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ai.rs  dropbox.rs  entry.rs  google_drive.rs  index.rs  lib.rs  storage.rs  sync.rs  telemetry.rs
docs/plans/: 2026-03-17-electron-app-design.md  2026-03-17-electron-app-implementation-plan.md  2026-03-18-client-owned-secrets-design.md  2026-03-18-client-owned-secrets-implementation-plan.md
electron/: index.html  package.json  settings.html  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/electron-main/: main.ts
electron/src/: App.tsx  SettingsApp.tsx  main.tsx  settings.tsx  shims.d.ts  silt.ts  styles.css
napi/: Cargo.toml  package.json
napi/src/: lib.rs
tui/: package.json  tsconfig.json
tui/src/: App.tsx  context.tsx  index.tsx  silt.ts  theme.ts
tui/src/components/: AiMode.tsx  EditMode.tsx  EntryList.tsx  ListMode.tsx  LogViewer.tsx  SearchMode.tsx  SettingsDialog.tsx  StatusBar.tsx  TabBar.tsx  WriteMode.tsx
tui/src/hooks/: useAppKeyboard.ts  useSync.ts
