[package]
name = "silt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
