[package]
name = "silt-napi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["anyhow"] }
napi-derive = "3"
silt-core = { path = "../core" }
anyhow = "1"
log = "0.4"
chrono = "0.4"
serde_json = "1"
dirs = "5"

[build-dependencies]
napi-build = "2"
